# 5.0.5
- bugfix in sdcApp() when using R-objects as data input

# 5.0.4
- new default theme "IHSN" for sdcApp()
- fixing an issue in report() where  disclosure risk for original data was wrongly displayed if alpha-parameter was set
- allow passing through of arguments in sdcApp()
- add functions argus_rankswap() and argus_microaggregation() that use c++-code directly from mu-argus
- bugfix in dUtility()
- new function riskyCells() that allow to compute "unsafe cells" as in mu-argus
- several code-optimizations and cleanup

# 5.0.3
- improvement: show name of uploaded file in report when using sdcApp() (fixes #209)
- correct summary statistics in GUI in case not all variables have been changed
- fixes for file-imports of datasets containing labels (eg. stata-files)
- allow to change computation of suda2-scores by adding a parameter to suda2()
- use some functions (gowerD,..) from VIM
- bugfix for special case of only one dim-variable in freqCalc()
- bugfix for edge-cases in localSuppression()/kAnon()
- update references and improve documentation


# 5.0.2
- consistency improvements
- code cleanup
- fixes for non-ut8 encoded metadata using file import in graphical user interface
- do not allow missing values in weight-variable
- various small bugfixes and improvements

# 5.0.1
- This release includes some small improvements in the graphical user interface and preperations for new major R version.

# 5.0.0
- new argument 'excludeVars' in createSdcObj()
- shiny-based GUI directly included in the package, can be started with sdcApp()
- added vignette for sdcApp()
- rewrite of function 'freqCalc()'
- many improvements and bugfixes

# 4.1.7
 - IHSN SDC guidelines as vignette
 - cat. key variables returned as factors in extractManipData

# 4.1.6
 - show method for sdcMicroObj

# 4.1.5
 - pram bug fix

# 4.1.4
 - bug fix mafasts

# 4.1.1
 - only small bug fixes

# 4.1.0
 - new IHSN SDC Guidelines included