@@ -38,6 +38,7 @@ export(groupAndRename)
 export(importProblem)
 export(indivRisk)
 export(kAnon)
+export(kAnon_violations)
 export(ldiversity)
 export(localSupp)
 export(localSuppression)
@@ -69,6 +70,7 @@ export(varToNumeric)
 export(writeSafeFile)
 exportClasses(sdcMicroObj)
 exportMethods("strataVar<-")
+exportMethods(kAnon_violations)
 exportMethods(print)
 exportMethods(show)
 import(MASS)
